force-app/main/default/objects/Case/fields/Deflected_By_KB__c.field-meta.xml
<CustomField>
    <fullName>Deflected_By_KB__c</fullName>
    <label>Deflected By Knowledge Base</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>True when the case was resolved via self-service Knowledge Base article before agent involvement, used to measure tier deflection rate.</description>
</CustomField>