force-app/main/default/objects/Case/fields/First_Response_At__c.field-meta.xml
<CustomField>
    <fullName>First_Response_At__c</fullName>
    <label>First Response At</label>
    <type>DateTime</type>
    <description>Auto-populated by the Case Status Notification Flow the first time a case status changes away from New, used for first-response-time reporting.</description>
</CustomField>