force-app/main/default/objects/Case/fields/Support_Tier__c.field-meta.xml
<CustomField>
    <fullName>Support_Tier__c</fullName>
    <label>Support Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
                <default>true</default>
                <label>Tier 1</label>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Segregates cases by operational support tier for routing and permission-based data access.</description>
</CustomField>